Add video generation logging and fix duration threshold
Multiple fixes:
1. Fixed Stage Editor not respecting custom duration threshold
2. Added comprehensive video generation setting logging
3. Created SETTINGS_STORAGE.md documentation

Changes:
- StageEditorModal: Removed default timeThreshold=90
- ReportGeneration: Enhanced logging for video setting
- api.ts: Added logging for backend parameter
- SETTINGS_STORAGE.md: Complete settings documentation

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,9 @@
 # Use Python 3.13 base image
 FROM python:3.13-slim
 
-# Install system dependencies for Playwright
+# Install system dependencies for Playwright and ffmpeg for video generation
 RUN apt-get update && apt-get install -y \
+    ffmpeg \
     libnss3 \
     libatk1.0-0 \
     libdrm2 \
