--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -88,5 +88,5 @@ reportlab==4.1.0
 playwright==1.49.0
 xhtml2pdf==0.2.17
 PyPDF2==3.0.1
-pandas==2.2.0
-openpyxl==3.1.2
+pandas>=2.0.0
+openpyxl>=3.1.0
